--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -38,24 +39,6 @@
     .comment small { font-size: 0.75rem; color: #666; margin-left: 0.5rem; }
     .comment button { position: absolute; top: -6px; right: -6px; background: #ef4444; border: none; border-radius: 50%; color: white; font-size: 0.7rem; padding: 2px 5px; cursor: pointer; }
     #entryForm .media-preview { margin-top: 1rem; }
-    #notif {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background: #ec4899;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
-      opacity: 0;
-      transform: translateY(-20px);
-      transition: all 0.3s;
-      z-index: 1000;
-    }
-    #notif.show {
-      opacity: 1;
-      transform: translateY(0);
-    }
   </style>
 </head>
 <body>
@@ -91,7 +74,7 @@
     <button class="button" onclick="toggleForm()">+ Tambah Entry</button>
     <button class="button logout" onclick="logout()">🚪 Logout</button>
 
-    <form id="entryForm" onsubmit="saveEntry(event)" class="hidden card">
+    <form id="entryForm" onsubmit="addEntry(event)" class="hidden card">
       <h2>✍️ Tulis Entri</h2>
       <input type="text" id="mood" placeholder="Mood (😊 / 😢 / 😍)" required />
       <input type="text" id="title" placeholder="Judul" required />
@@ -105,24 +88,22 @@
     <div id="entries"></div>
   </div>
 
-  <!-- 🔔 Notifikasi -->
-  <div id="notif"></div>
-  <audio id="notifSound" src="https://assets.mixkit.co/sfx/preview/mixkit-bell-notification-933.mp3" preload="auto"></audio>
-
   <!-- Supabase -->
   <script src="https://unpkg.com/@supabase/supabase-js"></script>
   <script>
     const SUPABASE_URL = "https://fysptdalfoklfvihimfv.supabase.co";
-    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZ5c3B0ZGFsZm9rbGZ2aWhpbWZ2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg2MTU0NjcsImV4cCI6MjA3NDE5MTQ2N30.wOE0br4Wwb36AjFmLyybksO_TyB64guNg0c2z85kAe4"; // ganti dengan key projectmu
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZ5c3B0ZGFsZm9rbGZ2aWhpbWZ2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg2MTU0NjcsImV4cCI6MjA3NDE5MTQ2N30.wOE0br4Wwb36AjFmLyybksO_TyB64guNg0c2z85kAe4";
     const db = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     let currentUser = null;
     let editingIndex = null;
 
+    // 🔹 Tokens default
     function getTokens() {
       return { user: "20825", partner: "30309" };
     }
 
+    // 🔹 Profile
     async function getProfileData() {
       const { data, error } = await db.from("profiles").select("*").limit(1).single();
       if (error || !data) {
@@ -172,6 +153,7 @@
       document.getElementById("editProfileForm").classList.toggle("hidden");
     }
 
+    // 🔹 Entries
     async function loadEntries() {
       const { data, error } = await db.from("entries").select("*").order("id", { ascending: false });
       if (error) { console.error(error); return []; }
@@ -220,7 +202,7 @@
       });
     }
 
-    async function saveEntry(e) {
+    async function addEntry(e) {
       e.preventDefault();
       const mood = document.getElementById("mood").value;
       const title = document.getElementById("title").value;
@@ -230,13 +212,8 @@
       const date = now.toLocaleDateString("id-ID", { day: "2-digit", month: "short", year: "numeric" });
       const time = now.toLocaleTimeString("id-ID", { hour: "2-digit", minute: "2-digit" });
 
-      const finishSave = async (mediaHTML) => {
-        if (editingIndex) {
-          await db.from("entries").update({ mood, title, content, media: mediaHTML, date, time }).eq("id", editingIndex);
-          editingIndex = null;
-        } else {
-          await db.from("entries").insert([{ mood, title, content, media: mediaHTML, date, time, loves: 0, comments: [], author: currentUser }]);
-        }
+      const finishInsert = async (mediaHTML) => {
+        await db.from("entries").insert([{ mood, title, content, media: mediaHTML, date, time, loves: 0, comments: [], author: currentUser }]);
         document.getElementById("entryForm").classList.add("hidden");
         document.getElementById("entryForm").reset();
         renderEntries();
@@ -248,16 +225,11 @@
           let mediaHTML = "";
           if (file.type.startsWith("image/")) mediaHTML = `<img src="${e.target.result}" />`;
           else if (file.type.startsWith("video/")) mediaHTML = `<video src="${e.target.result}" controls></video>`;
-          finishSave(mediaHTML);
+          finishInsert(mediaHTML);
         };
         r.readAsDataURL(file);
       } else {
-        if (editingIndex) {
-          const { data } = await db.from("entries").select("media").eq("id", editingIndex).single();
-          finishSave(data?.media || "");
-        } else {
-          finishSave("");
-        }
+        finishInsert("");
       }
     }
 
@@ -274,9 +246,10 @@
     }
 
     async function deleteEntry(id) {
-      if (!confirm("Yakin mau hapus entry ini?")) return;
-      await db.from("entries").delete().eq("id", id);
-      renderEntries();
+      if (confirm("Yakin mau hapus entry ini?")) {
+        await db.from("entries").delete().eq("id", id);
+        renderEntries();
+      }
     }
 
     async function loveEntry(id) {
@@ -289,13 +262,11 @@
     async function addComment(e, id) {
       e.preventDefault();
       const input = e.target.querySelector("input");
-      const text = (input.value || "").trim();
-      if (!text) return;
       const { data } = await db.from("entries").select("comments").eq("id", id).single();
-      const comments = data?.comments || [];
+      const comments = data.comments || [];
       const now = new Date();
       const time = now.toLocaleTimeString("id-ID", { hour: "2-digit", minute: "2-digit" });
-      comments.push({ text, author: currentUser, time });
+      comments.push({ text: input.value, author: currentUser, time });
       await db.from("entries").update({ comments }).eq("id", id);
       input.value = "";
       renderEntries();
@@ -303,67 +274,59 @@
 
     async function deleteComment(id, index) {
       const { data } = await db.from("entries").select("comments").eq("id", id).single();
-      const comments = data?.comments || [];
+      const comments = data.comments || [];
       comments.splice(index, 1);
       await db.from("entries").update({ comments }).eq("id", id);
       renderEntries();
     }
 
+    // 🔹 Login
+    function login() {
+      const { user, partner } = getTokens();
+      const t1 = document.getElementById("token1").value;
+      const t2 = document.getElementById("token2").value;
+
+      if (t1 === user && t2 === partner) currentUser = "you";
+      else if (t1 === partner && t2 === user) currentUser = "partner";
+      else {
+        document.getElementById("loginError").style.display = "block";
+        return;
+      }
+
+      localStorage.setItem("currentUser", currentUser);
+      document.getElementById("loginPage").classList.add("hidden");
+      document.getElementById("diaryPage").classList.remove("hidden");
+      renderProfile();
+      renderEntries();
+    }
+
+    function logout() {
+      localStorage.removeItem("currentUser");
+      location.reload();
+    }
+
     function toggleForm() {
       document.getElementById("entryForm").classList.toggle("hidden");
     }
+
     function cancelEdit() {
       editingIndex = null;
-      document.getElementById("entryForm").reset();
       document.getElementById("entryForm").classList.add("hidden");
+      document.getElementById("entryForm").reset();
     }
 
-    function showNotif(msg) {
-      const notif = document.getElementById("notif");
-      const sound = document.getElementById("notifSound");
-      notif.innerText = msg;
-      notif.classList.add("show");
-      sound.play();
-      setTimeout(() => notif.classList.remove("show"), 3000);
-    }
-
-    async function login() {
-      const t1 = document.getElementById("token1").value;
-      const t2 = document.getElementById("token2").value;
-      const { user, partner } = getTokens();
-      if ((t1 === user && t2 === partner) || (t1 === partner && t2 === user)) {
-        currentUser = t1;
+    // 🔹 Auto login
+    window.onload = () => {
+      const saved = localStorage.getItem("currentUser");
+      if (saved) {
+        currentUser = saved;
         document.getElementById("loginPage").classList.add("hidden");
         document.getElementById("diaryPage").classList.remove("hidden");
         renderProfile();
         renderEntries();
-        subscribeRealtime();
-      } else {
-        document.getElementById("loginError").style.display = "block";
       }
-    }
-
-    function logout() {
-      location.reload();
-    }
-
-    function subscribeRealtime() {
-      db.channel("realtime:entries")
-        .on("postgres_changes", { event: "*", schema: "public", table: "entries" }, payload => {
-          renderEntries();
-          if (payload.eventType === "INSERT") showNotif("💌 Entry baru ditambahkan!");
-          if (payload.eventType === "UPDATE") showNotif("✏️ Entry diperbarui!");
-          if (payload.eventType === "DELETE") showNotif("🗑️ Entry dihapus!");
-        })
-        .subscribe();
-
-      db.channel("realtime:profiles")
-        .on("postgres_changes", { event: "*", schema: "public", table: "profiles" }, payload => {
-          renderProfile();
-          showNotif("👩‍❤️‍👨 Profil diperbarui!");
-        })
-        .subscribe();
-    }
+    };
   </script>
 </body>
 </html>
+
